--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kel Strother -Developer Portfolio-</title>
+    <title>Kel Strother -Portfolio-</title>
 
     <!-- ***************************JQUERY*************************************** -->
     <script
@@ -14,22 +14,11 @@
 
     <!-- *****************************BOOTSTRAP 5********************************** -->
     <!-- ************BOOTSTRAP 5 DOCS -> https://v5.getbootstrap.com/************** -->
-    <!-- <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
-      integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
-      integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
-      crossorigin="anonymous"
-    ></script> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
     <!-- ***************************SHOELACE********************************** -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.23/dist/shoelace/shoelace.css">
     <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.23/dist/shoelace/shoelace.esm.js"></script> -->
@@ -37,9 +26,73 @@
     <!-- ************************YOUR CODE**************************************** -->
     <script src="./js/components.js" defer></script>
     <script src="./js/app.js" defer></script>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style1.css" />
   </head>
-  <body>
-    <h1>Kel Strother -Developer Portfolio-</h1>
-  </body>
+<body>
+                          <!-- ?HEADER -->
+<header class="container">
+  <div class="firstname">
+    <p class="kel">Kel</p>
+  </div>
+  <div class="lastcontain">
+    <h1 class="lastname">Strother</h1>
+  </div>
+</header>
+                          <!-- ^MAIN -->
+<main class="content">
+  <div class="hey">
+    <p class="l1">Hello!</p>
+  </div>
+  <div class="look">
+    <p class="l2">Look what I can do!</p>
+  </div>
+  <div class="summary">
+    <p class="brag">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatum nihil delectus.</p>
+  </div>
+</main>
+<footer>
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">About</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Creation</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Contact</a>
+    </li>
+  </ul>
+  <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Home</a>
+      <a class="navbar-brand" href="#">About</a>
+      <a class="navbar-brand" href="#">Creations</a>
+      <a class="navbar-brand" href="#">Contact</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#">Creations</a>
+          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+        </div>
+      </div>
+    </div>
+  </nav> -->
+  <!-- <div class="nav">
+    <ul class="navlist">
+      <li class="home"><a href="index.html">Main</a></li>
+      <li class="about"><a href="about.html">About</a></li>
+      <li class="creations"><a href="creations.html">Work<a /></li>
+      <li class="contact"><a href="contact.html">Contact</a></li>
+    </ul>
+  </div> -->
+</footer>
+</body>
 </html>
