--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
   <!-- ************************YOUR CODE**************************************** -->
   <script src="./js/components.js" defer></script>
   <script src="./js/app.js" defer></script>
-  <link rel="stylesheet" href="./css/style1.css" />
+  <link rel="stylesheet" href="./css/portfolio.css" />
 </head>
 
 <body>
@@ -45,15 +45,5 @@
 
 
   <!-- * FOOTER -->
-  <footer>
-    <div class="nav">
-      <ul class="navlist">
-        <li class="home"><a href="index.html">Main</a></li>
-        <li class="about"><a href="about.html">About</a></li>
-        <li class="creations"><a href="creations.html">Creations<a /></li>
-        <li class="contact"><a href="contact.html">Contact</a></li>
-    </div>
-  </footer>
 </body>
-
 </html>
