--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -24,13 +24,13 @@
     <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.23/dist/shoelace/shoelace.esm.js"></script> -->
 
     <!-- ************************YOUR CODE**************************************** -->
-    <script src="./js/components.js" defer></script>
+    <!-- <script src="./js/components.js" defer></script>
     <script src="./js/app.js" defer></script>
     <link rel="stylesheet" href="./css/style1.css" />
   </head>
 <body>
                           <!-- ?HEADER -->
-<header class="container">
+<!-- <header class="container">
   <div class="firstname">
     <p class="kel">Kel</p>
   </div>
@@ -63,8 +63,8 @@
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Contact</a>
-    </li>
-  </ul>
+    </li> -->
+  </ul> -->
   <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Home</a>
@@ -95,4 +95,4 @@
   </div> -->
 </footer>
 </body>
-</html>
+</html> -->
