icon bar, bottom navbar

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,21 +46,18 @@
                          <!-- !HEADER -->
 <header class="maintitle">
   <div class="container">
-    <div class="firstname">
-      <h1 id="kel">Kel</h1>
-    </div>
-    <div class="lastname">
-      <h1 id="strother">Strother</h1>
+    <div class="name">
+      <p class="firstname">Kel</p>
+      <p class="lastname">Strother</p>
     </div>
   </div>
 </header>
 <div class="navbar">
-  <ul class="navlist">
-    <li class="navitem" id="about"><a href="#">about</a></li>
-    <li class="navitem" id="mywork"><a href="#">my.work</a></li> <a href="#"></a>
-    <li class="navitem" id="contact"><a href="#">contact</a></li>
-  </ul>
+  <a href="#" class="active" id="about">about</a>
+  <a href="#" id="work">my.work</a>
+  <a href="#" id="contact">contact</a>
 </div>
+
                             <!-- !ABOUT ME -->
 <section class="aboutsec">
   <!-- <div class="imsofancy"> -->
@@ -87,6 +84,12 @@
                               <!-- !PROJECTS -->
 <main id="creations"></main>
                               <!-- !Contact -->
+<div class="icons">
+  <a href="https://facebook.com/kel.strother/"><img src="/img/iconfinder_SocialMedia_Facebook-Outline_2959749.png"/></a>
+  <a href="https://facebook.com/kel.strother/"><img src="/img/iconfinder_SocialMedia_LinkedIn-Outline_2959747.png"/></a>
+  <a href="https://linkedin.com/kelstrother/"><img src="/img/iconfinder_SocialMedia_Instagram-Outline_2959748.png"/></a>
+  <a href="https://slack.com/kelstrother/"><img src="/img/iconfinder_SocialMedia_Twitter-Outline_2959740.png"/></a>
+</div>
 <section class="contact">
   <div class="grabber">
     <h2 class="invitation">Let's Build</h2>
@@ -109,7 +112,6 @@
 </section>
                               <!-- !FOOTER -->
 <footer>
-
 </footer>
 </body>
 </html>
