skills page, contact form, header

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,43 +5,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kel Strother -Dev Portfolio-</title>
-
-  <!-- ***************************JQUERY*************************************** -->
+<!-- ^***************************JQUERY*************************************** -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <!-- *****************************BOOTSTRAP 5********************************** -->
-  <!-- ************BOOTSTRAP 5 DOCS -> https://v5.getbootstrap.com/************** -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+  <!-- ^************BOOTSTRAP 5 DOCS -> https://v5.getbootstrap.com/************** -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
-  <!-- !FOUNDATION -->
-  <!-- foundation-float.min.css: Compressed CSS with legacy Float Grid -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-float.min.css"
-    integrity="sha256-4ldVyEvC86/kae2IBWw+eJrTiwNEbUUTmN0zkP4luL4=" crossorigin="anonymous">
-
-  <!-- foundation-prototype.min.css: Compressed CSS with prototyping classes -->
-  <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-prototype.min.css"
-    integrity="sha256-BiKflOunI0SIxlTOOUCQ0HgwXrRrRwBkIYppEllPIok=" crossorigin="anonymous">
-
-  <!-- foundation-rtl.min.css: Compressed CSS with right-to-left reading direction -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-rtl.min.css"
-    integrity="sha256-F+9Ns8Z/1ZISonBbojH743hsmF3x3AlQdJEeD8DhQsE=" crossorigin="anonymous">
-  <!-- ***************************SHOELACE********************************** -->
-  <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.23/dist/shoelace/shoelace.css">
-  <script type="module"
-    src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.23/dist/shoelace/shoelace.esm.js"></script>
-
-  <!-- ************************YOUR CODE**************************************** -->
+    crossorigin="anonymous"></script> -->
+  <!-- <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script> -->
+  <!-- <!-- ***************************SHOELACE********************************** -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.23/dist/shoelace/shoelace.css">
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.23/dist/shoelace/shoelace.esm.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
+      integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
+      integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
+ <!-- ^************************YOUR CODE**************************************** -->
   <script src="./js/components.js" defer></script>
   <script src="./js/app.js" defer></script>
   <link rel="stylesheet" href="./css/style.css" />
-  <!-- <link rel="stylesheet" href="./css/main.css" /> -->
 </head>
-
 <body>
                          <!-- !HEADER -->
 <header class="maintitle">
@@ -60,13 +45,12 @@
 
                             <!-- !ABOUT ME -->
 <section class="aboutsec">
-  <!-- <div class="imsofancy"> -->
   <div id="statement">
     <div class="title">
       <h2 class="jobtitle">Software Engineer</h2>
     </div>
     <div class="outof">
-      <h3 class="outof-word">out of</h3>
+      <p class="outof-word">out of</p>
     </div>
     <div class="denver">
       <h2 class="city">Denver,</h2>
@@ -78,16 +62,62 @@
 </section>
 <section class="skillscontainer">
   <div class="skills">
-    <h2 class="myskills">SKILLS SHOULD GO HERE?</h2>
+    <p class="myskills">skills</p>
+  </div>
+  <div class="skillgallery">
+    <div class="skill">
+      <img class="icon-html" src="/img/iconfinder_badge-html-5_317755 (1).svg"/>
+      <div class="desc">HMTL 5</div>
+    </div>
+    <div class="skill">
+      <img class="icon-css" src="img/iconfinder_badge-css-3_317756.svg"/>
+      <div class="desc">CSS 3</div>
+    </div>
+    <div class="skill">
+      <img class="icon-js" src="img/iconfinder_code-programming-javascript-software-develop-command-language_652581.svg"/>
+      <div class="desc">JavaScript</div>
+    </div>
+    <div class="skill">
+      <img class="icon-jq" src="img/iconfinder_jquery_308442.svg"/>
+      <div class="desc">jQuery</div>
+    </div>  
+    <div class="skill">
+      <img class="icon-node" src="img/iconfinder_node_3069651.svg"/>
+      <div class="desc">Node.js</div>
+    </div>
+    <div class="skill">
+      <img class="icon-il" src="/img/iconfinder_11_Illustrator_Adobe_Ai_logo_logos_4469556.svg"/>
+      <div class="desc">Illustrator</div>
+    </div>
+    <div class="skill">
+      <img class="icon-ps" src="img/iconfinder_23_Photoshop_Adobe_logo_logos_4469545.svg"/>
+      <div class="desc">Photoshop</div>
+    </div>
+    <div class="skill">
+      <img class="icon-xd" src="img/iconfinder_3_Xd_Adobe_logo_logos_4469566.svg"/>
+      <div class="desc">Adobe XD</div>
+    </div>
+    <div class="skill">
+      <img class="icon-figma" src="img/iconfinder_Figma_1_square_2925245 (1).svg"/>
+      <div class="desc">Figma</div>
+    </div>
+    <div class="skill">
+      <img class="icon-affinity" src="img/iconfinder_logo_brand_brands_logos_affinity_designer_2993705 (1).svg"/>
+      <div class="desc">Afinnity</div>
+    </div>
   </div>
 </section>
                               <!-- !PROJECTS -->
+<div class="my-work">
+  <p class="work-heading">my.Work</p>
+</div>
 <main id="creations"></main>
+ 
                               <!-- !Contact -->
 <div class="icons">
   <a href="https://facebook.com/kel.strother/"><img src="/img/iconfinder_SocialMedia_Facebook-Outline_2959749.png"/></a>
-  <a href="https://facebook.com/kel.strother/"><img src="/img/iconfinder_SocialMedia_LinkedIn-Outline_2959747.png"/></a>
-  <a href="https://linkedin.com/kelstrother/"><img src="/img/iconfinder_SocialMedia_Instagram-Outline_2959748.png"/></a>
+  <a href="https://linkedin.com/kelstrother/"><img src="/img/iconfinder_SocialMedia_LinkedIn-Outline_2959747.png"/></a>
+  <a href=""><img src="/img/iconfinder_SocialMedia_Instagram-Outline_2959748.png"/></a>
   <a href="https://slack.com/kelstrother/"><img src="/img/iconfinder_SocialMedia_Twitter-Outline_2959740.png"/></a>
 </div>
 <section class="contact">
@@ -98,14 +128,9 @@
   </div>
   <div class="container" id="contactme">
     <form action="https://formspree.io/f/mrgooljj" method="POST">
-      <label>
-        Your email:
-        <input type="text" name="_replyto">
-      </label>
-      <label>
-        Your message:
-        <textarea name="message"></textarea>
-      </label>
+      <label>Name:<input type="text" name="name"></label>
+      <label>Your email:<input type="text" name="_replyto"></label>
+      <label>Your message:<textarea name="message"></textarea></label>
       <button type="submit">Send</button>
     </form>
   </div>
