--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,9 @@
     <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
       integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
  <!-- ^************************YOUR CODE**************************************** -->
+  <link rel="stylesheet" href="./css/style.css"/>
   <script src="./js/components.js" defer></script>
   <script src="./js/app.js" defer></script>
-  <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
                          <!-- !HEADER -->
@@ -37,11 +37,8 @@
     </div>
   </div>
 </header>
-<div class="navbar">
-  <a href="#" class="active" id="about">about</a>
-  <a href="#" id="work">my.work</a>
-  <a href="#" id="contact">contact</a>
-</div>
+<div class="headertrans"></div>
+
 
                             <!-- !ABOUT ME -->
 <section class="aboutsec">
@@ -60,6 +57,7 @@
     </div>
   </div>
 </section>
+<div class="skillstrans"></div>
 <section class="skillscontainer">
   <div class="skills">
     <p class="myskills">skills</p>
@@ -107,18 +105,21 @@
     </div>
   </div>
 </section>
+
                               <!-- !PROJECTS -->
+<div class="worktrans"></div>
 <div class="my-work">
-  <p class="work-heading">my.Work</p>
+  <p class="work-heading">my<span class="period">.</span>Work</p>
 </div>
 <main id="creations"></main>
  
                               <!-- !Contact -->
+<div class="contacttrans"></div>
 <div class="icons">
-  <a href="https://facebook.com/kel.strother/"><img src="/img/iconfinder_SocialMedia_Facebook-Outline_2959749.png"/></a>
-  <a href="https://linkedin.com/kelstrother/"><img src="/img/iconfinder_SocialMedia_LinkedIn-Outline_2959747.png"/></a>
-  <a href=""><img src="/img/iconfinder_SocialMedia_Instagram-Outline_2959748.png"/></a>
-  <a href="https://slack.com/kelstrother/"><img src="/img/iconfinder_SocialMedia_Twitter-Outline_2959740.png"/></a>
+  <a href="https://facebook.com/kel.strother/"><img src="icon/iconfinder_facebook-logo_1269914.svg"/></a>
+  <a href="https://linkedin.com/kelstrother/"><img src="icon/iconfinder_Circled_Linkedin_svg_5279114 (2).svg"/></a>
+  <a href="https://instagram.com/kelstrother/"><img src="icon/iconfinder_Instagram_2613262.svg"/></a>
+  <a href="https://twitter.com/kelstrother/"><img src="/icon/iconfinder_BW_Twitter_3_glyph_svg_5305172.svg"/></a>
 </div>
 <section class="contact">
   <div class="grabber">
@@ -137,6 +138,14 @@
 </section>
                               <!-- !FOOTER -->
 <footer>
+  <div class="emptynest">
+
+  </div>
+<div class="navbar">
+  <a href="#" class="active" id="about">about</a>
+  <a href="#" id="work">my<span class="period">.</span>Work</a>
+  <a href="#" id="contact">contact</a>
+</div>
 </footer>
 </body>
 </html>
