footer contact image

--- a/portfolio.html
+++ b/portfolio.html
@@ -131,6 +131,7 @@
     <h2 class="invitation">Let's Build</h2>
     <h2 class="finale">Something</h2>
     <h2 class="awesome">Awesome!</h2>
+    <img src="img/background.png" alt="Kel holding guitars" class="guitars">
   </div>
   <div class="container" id="contactme">
     <form action="https://formspree.io/f/mrgooljj" method="POST">
