polished up tablet responsivenes

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,6 +41,7 @@
 <div class="navbarwide">
   <a href="#aboutlink" class="active" id="aboutwide">about</a>
   <a href="#worklink" id="workwide">my<span class="periodw">.</span>Work</a>
+  <a href="#skillslink" id="skillswide">skills</a>
   <a href="#contactlink" id="contactwide">contact</a>
 </div>
   <section class="aboutsec">
@@ -61,9 +62,9 @@
   </section>
                             <!-- !ABOUT ME -->
 <div class="abouttrans">
-  <div class="aboutme" id="aboutlink"></div>
+  
 </div>
-<section class="skillscontainer" id="worklink">
+<section class="skillscontainer" id="skillslink">
   <div class="skills">
     <p class="myskills">skills</p>
   </div>
@@ -112,14 +113,26 @@
 </section>
 
                               <!-- !PROJECTS -->
-<div class="worktrans"></div>
+<div class="worktrans" id="worklink"></div>
 <div class="my-work">
   <p class="work-heading">my<span class="period">.</span>Work</p>
 </div>
 <main id="creations"></main>
  
                               <!-- !Contact -->
-<div class="contacttrans"></div>
+<div class="contacttrans" id="aboutlink">
+  <div class="aboutme">
+    <h3 class="bitaboutme">A little bit about me...</h3>
+  </div>
+</div>
+<section class="myself">
+  <p class="moreabout">I'm 33 years old and have
+                      lived in Colorado for all of 
+                      them. When I'm not creating with 
+                      code, I enjoy recording music and 
+                      playing guitar </p>
+</section>
+
 <div class="icons" id="contactlink">
   <a href="https://facebook.com/kel.strother/"><img src="icon/iconfinder_facebook-logo_1269914.svg"/></a>
   <a href="https://linkedin.com/kelstrother/"><img src="icon/iconfinder_Circled_Linkedin_svg_5279114 (2).svg"/></a>
@@ -128,10 +141,10 @@
 </div>
 <section class="contact">
   <div class="grabber">
-    <h2 class="invitation">Let's Build</h2>
+    <!-- <h2 class="invitation">Let's Build</h2>
     <h2 class="finale">Something</h2>
-    <h2 class="awesome">Awesome!</h2>
-    <img src="img/background.png" alt="Kel holding guitars" class="guitars">
+    <h2 class="awesome">Awesome!</h2> -->
+    <img src="img/slice1.png" alt="Me holding guitars" class="guitars">
   </div>
   <div class="container" id="contactme">
     <form action="https://formspree.io/f/mrgooljj" method="POST">
@@ -143,11 +156,12 @@
   </div>
 </section>
                               <!-- !FOOTER -->
-<footer>
-div class="emptynest"></div>
+<footer><
+<div class="emptynest"></div>
 <div class="navbar">
-  <a href="#aboutlink" class="active" id="about">about</a>
+  <a href="#skillslink" id="skills">skills</a>
   <a href="#worklink" id="work">my<span class="period">.</span>Work</a>
+  <a href="#aboutlink" class="active" id="about">about</a>
   <a href="#contactlink" id="contact">contact</a>
 </div>
 </footer>
