updated skills, footer image, contact form

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,12 +38,12 @@
     </div>
   </div>
 </header>
-<div class="navbarwide">
-  <a href="#aboutlink" class="active" id="aboutwide">about</a>
+<!-- <div class="navbarwide">
+  <a href="#aboutlink" id="aboutwide">about</a>
   <a href="#worklink" id="workwide">my<span class="periodw">.</span>Work</a>
   <a href="#skillslink" id="skillswide">skills</a>
   <a href="#contactlink" id="contactwide">contact</a>
-</div>
+</div> -->
   <section class="aboutsec">
     <div id="statement">
       <div class="title">
@@ -90,6 +90,18 @@
       <div class="desc">Node.js</div>
     </div>
     <div class="skill">
+      <img class="icon-boot" src="icon/iconfinder_Bootstrap_4923030.svg">
+      <div class="desc">Bootstrap</div>
+    </div>
+    <div class="skill">
+      <img class="icon-angular" src="icon/iconfinder_angular_308434.svg">
+      <div class="desc">Angular</div>
+    </div>
+    <div class="skill">
+      <img class="icon-react" src="icon/iconfinder_React.js_logo_1174949 (1).svg">
+      <div class="desc">React</div>
+    </div>
+    <div class="skill">
       <img class="icon-il" src="/img/iconfinder_11_Illustrator_Adobe_Ai_logo_logos_4469556.svg"/>
       <div class="desc">Illustrator</div>
     </div>
@@ -122,7 +134,7 @@
                               <!-- !Contact -->
 <div class="contacttrans" id="aboutlink">
   <div class="aboutme">
-    <h3 class="bitaboutme">A little bit about me...</h3>
+    <h3 class="bitaboutme">about me...</h3>
   </div>
 </div>
 <section class="myself">
@@ -144,11 +156,11 @@
     <!-- <h2 class="invitation">Let's Build</h2>
     <h2 class="finale">Something</h2>
     <h2 class="awesome">Awesome!</h2> -->
-    <img src="img/slice1.png" alt="Me holding guitars" class="guitars">
+    <img src="img/background@2x.png" alt="Me holding guitars" class="guitars">
   </div>
   <div class="container" id="contactme">
     <form action="https://formspree.io/f/mrgooljj" method="POST">
-      <label>Name:<input type="text" name="name"></label>
+      <label>Name:<input class="textfield" type="text" name="name"></label>
       <label>Your email:<input type="text" name="_replyto"></label>
       <label>Your message:<textarea name="message"></textarea></label>
       <button type="submit">Send</button>
@@ -163,6 +175,12 @@
   <a href="#worklink" id="work">my<span class="period">.</span>Work</a>
   <a href="#aboutlink" class="active" id="about">about</a>
   <a href="#contactlink" id="contact">contact</a>
+</div>
+<div class="navbarbottom">
+<a href="#aboutlink" id="aboutbottom">about</a>
+<a href="#worklink" id="workbottom">my<span class="periodw">.</span>Work</a>
+<a href="#skillslink" id="skillsbottom">skills</a>
+<a href="#contactlink" id="contactbottom">contact</a>
 </div>
 </footer>
 </body>
