finished desktop responsive

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,6 +25,7 @@
  <!-- ^************************YOUR CODE**************************************** -->
   <link rel="stylesheet" href="./css/style.css"/>
   <link rel="stylesheet" href="./css/tablet.css"/>
+  <link rel="stylesheet" href="./css/desktop.css"/>
   <script src="./js/components.js" defer></script>
   <script src="./js/app.js" defer></script>
 </head>
@@ -125,8 +126,8 @@
 </section>
 
                               <!-- !PROJECTS -->
-<div class="worktrans" id="worklink"></div>
-<div class="my-work">
+<div class="worktrans"></div>
+<div class="my-work" id="worklink">
   <p class="work-heading">my<span class="period">.</span>Work</p>
 </div>
 <main id="creations"></main>
@@ -138,13 +139,17 @@
   </div>
 </div>
 <section class="myself">
-  <p class="moreabout">I'm 33 years old and have
-                      lived in Colorado for all of 
-                      them. When I'm not creating with 
-                      code, I enjoy recording music and 
-                      playing guitar </p>
+  <p class="moreabout">My name is Kel. I am 33 years old 
+                       and have lived in Colorado for all 
+                       33 of 'em. When I'm not creating 
+                       things with code, I enjoy anything
+                       music related.<br><br>I am a software 
+                       engineer with a focus on frontend
+                       development. A need for creative
+                       expression motivates me to build 
+                       things that make a difference in 
+                       people's lives.</p>
 </section>
-
 <div class="icons" id="contactlink">
   <a href="https://facebook.com/kel.strother/"><img src="icon/iconfinder_facebook-logo_1269914.svg"/></a>
   <a href="https://linkedin.com/kelstrother/"><img src="icon/iconfinder_Circled_Linkedin_svg_5279114 (2).svg"/></a>
@@ -153,9 +158,6 @@
 </div>
 <section class="contact">
   <div class="grabber">
-    <!-- <h2 class="invitation">Let's Build</h2>
-    <h2 class="finale">Something</h2>
-    <h2 class="awesome">Awesome!</h2> -->
     <img src="img/background@2x.png" alt="Me holding guitars" class="guitars">
   </div>
   <div class="container" id="contactme">
