added some animation

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,7 @@
     <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
       integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
  <!-- ^************************YOUR CODE**************************************** -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@animxyz/core@0.3.0/dist/animxyz.min.css">
   <link rel="stylesheet" href="./css/style.css"/>
   <link rel="stylesheet" href="./css/tablet.css"/>
   <link rel="stylesheet" href="./css/desktop.css"/>
@@ -71,55 +72,55 @@
   </div>
   <div class="skillgallery">
     <div class="skill">
-      <img class="icon-html" src="/img/iconfinder_badge-html-5_317755 (1).svg"/>
+      <img class="icon" src="/img/iconfinder_badge-html-5_317755 (1).svg"/>
       <div class="desc">HMTL 5</div>
     </div>
     <div class="skill">
-      <img class="icon-css" src="img/iconfinder_badge-css-3_317756.svg"/>
+      <img class="icon" src="img/iconfinder_badge-css-3_317756.svg"/>
       <div class="desc">CSS 3</div>
     </div>
     <div class="skill">
-      <img class="icon-js" src="img/iconfinder_code-programming-javascript-software-develop-command-language_652581.svg"/>
+      <img class="icon" src="img/iconfinder_code-programming-javascript-software-develop-command-language_652581.svg"/>
       <div class="desc">JavaScript</div>
     </div>
     <div class="skill">
-      <img class="icon-jq" src="img/iconfinder_jquery_308442.svg"/>
+      <img class="icon" src="img/iconfinder_jquery_308442.svg"/>
       <div class="desc">jQuery</div>
     </div>  
     <div class="skill">
-      <img class="icon-node" src="img/iconfinder_node_3069651.svg"/>
+      <img class="icon" src="img/iconfinder_node_3069651.svg"/>
       <div class="desc">Node.js</div>
     </div>
     <div class="skill">
-      <img class="icon-boot" src="icon/iconfinder_Bootstrap_4923030.svg">
+      <img class="icon" id="boot" src="icon/iconfinder_Bootstrap_4923030.svg">
       <div class="desc">Bootstrap</div>
     </div>
     <div class="skill">
-      <img class="icon-angular" src="icon/iconfinder_angular_308434.svg">
+      <img class="icon" src="icon/iconfinder_angular_308434.svg">
       <div class="desc">Angular</div>
     </div>
     <div class="skill">
-      <img class="icon-react" src="icon/iconfinder_React.js_logo_1174949 (1).svg">
+      <img class="icon" src="icon/iconfinder_React.js_logo_1174949 (1).svg">
       <div class="desc">React</div>
     </div>
     <div class="skill">
-      <img class="icon-il" src="/img/iconfinder_11_Illustrator_Adobe_Ai_logo_logos_4469556.svg"/>
+      <img class="icon" src="/img/iconfinder_11_Illustrator_Adobe_Ai_logo_logos_4469556.svg"/>
       <div class="desc">Illustrator</div>
     </div>
     <div class="skill">
-      <img class="icon-ps" src="img/iconfinder_23_Photoshop_Adobe_logo_logos_4469545.svg"/>
+      <img class="icon" src="img/iconfinder_23_Photoshop_Adobe_logo_logos_4469545.svg"/>
       <div class="desc">Photoshop</div>
     </div>
     <div class="skill">
-      <img class="icon-xd" src="img/iconfinder_3_Xd_Adobe_logo_logos_4469566.svg"/>
+      <img class="icon" src="img/iconfinder_3_Xd_Adobe_logo_logos_4469566.svg"/>
       <div class="desc">Adobe XD</div>
     </div>
     <div class="skill">
-      <img class="icon-figma" src="img/iconfinder_Figma_1_square_2925245 (1).svg"/>
+      <img class="icon" src="img/iconfinder_Figma_1_square_2925245 (1).svg"/>
       <div class="desc">Figma</div>
     </div>
     <div class="skill">
-      <img class="icon-affinity" src="img/iconfinder_logo_brand_brands_logos_affinity_designer_2993705 (1).svg"/>
+      <img class="icon" src="img/iconfinder_logo_brand_brands_logos_affinity_designer_2993705 (1).svg"/>
       <div class="desc">Afinnity</div>
     </div>
   </div>
