added some more animation, positioned a few elements

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,12 +40,6 @@
     </div>
   </div>
 </header>
-<!-- <div class="navbarwide">
-  <a href="#aboutlink" id="aboutwide">about</a>
-  <a href="#worklink" id="workwide">my<span class="periodw">.</span>Work</a>
-  <a href="#skillslink" id="skillswide">skills</a>
-  <a href="#contactlink" id="contactwide">contact</a>
-</div> -->
   <section class="aboutsec">
     <div id="statement">
       <div class="title">
@@ -173,12 +167,12 @@
                               <!-- !FOOTER -->
 <footer><
 <div class="emptynest"></div>
-<div class="navbar">
+<!-- <div class="navbar">
   <a href="#skillslink" id="skills">skills</a>
   <a href="#worklink" id="work">my<span class="period">.</span>Work</a>
   <a href="#aboutlink" class="active" id="about">about</a>
   <a href="#contactlink" id="contact">contact</a>
-</div>
+</div> -->
 <div class="navbarbottom">
 <a href="#aboutlink" id="aboutbottom">about</a>
 <a href="#worklink" id="workbottom">my<span class="periodw">.</span>Work</a>
