--- a/portfolio.html
+++ b/portfolio.html
@@ -35,18 +35,18 @@
 <header class="maintitle">
   <div class="container">
     <div class="name">
-      <p class="firstname">Kel</p>
-      <p class="lastname">Strother</p>
+      <h2 class="firstname">Kel</h2>
+      <h1 class="lastname">Strother</h1>
     </div>
   </div>
 </header>
   <section class="aboutsec">
     <div id="statement">
       <div class="title">
-        <h3 class="jobtitle">Software Engineer</h3>
+        <h2 class="jobtitle">Software Engineer</h2>
       </div>
       <div class="outof">
-        <p class="outof-word">out of</p>
+        <h3 class="outof-word">out of</h3>
       </div>
       <div class="denver">
         <h2 class="city">Denver,</h2>
@@ -57,12 +57,10 @@
     </div>
   </section>
                             <!-- !ABOUT ME -->
-<div class="abouttrans">
-  
-</div>
+<div class="abouttrans"></div>
 <section class="skillscontainer" id="skillslink">
   <div class="skills">
-    <p class="myskills">skills</p>
+    <h2 class="myskills">skills</h2>
   </div>
   <div class="skillgallery">
     <div class="skill">
@@ -123,14 +121,13 @@
                               <!-- !PROJECTS -->
 <div class="worktrans"></div>
 <div class="my-work" id="worklink">
-  <p class="work-heading">my<span class="period">.</span>Work</p>
+  <h2 class="work-heading">my<span class="period">.</span>Work</h2>
 </div>
 <main id="creations"></main>
- 
-                              <!-- !Contact -->
+                               <!-- !Contact -->
 <div class="contacttrans" id="aboutlink">
   <div class="aboutme">
-    <h3 class="bitaboutme">about me...</h3>
+    <h2 class="bitaboutme">about me...</h2>
   </div>
 </div>
 <section class="myself">
@@ -160,25 +157,28 @@
       <label>Name:<input class="textfield" type="text" name="name"></label>
       <label>Your email:<input type="text" name="_replyto"></label>
       <label>Your message:<textarea name="message"></textarea></label>
-      <button type="submit">Send</button>
+      <button type="submit">Submit</button>
     </form>
   </div>
 </section>
                               <!-- !FOOTER -->
-<footer><
-<div class="emptynest"></div>
+                             
+<footer>
+  <div class="emptynest"></div>
 <!-- <div class="navbar">
   <a href="#skillslink" id="skills">skills</a>
   <a href="#worklink" id="work">my<span class="period">.</span>Work</a>
   <a href="#aboutlink" class="active" id="about">about</a>
   <a href="#contactlink" id="contact">contact</a>
 </div> -->
-<div class="navbarbottom">
-<a href="#aboutlink" id="aboutbottom">about</a>
-<a href="#worklink" id="workbottom">my<span class="periodw">.</span>Work</a>
-<a href="#skillslink" id="skillsbottom">skills</a>
-<a href="#contactlink" id="contactbottom">contact</a>
-</div>
+<nav  class="navcontainer">
+  <div class="navbarbottom">
+    <a href="#skillslink" id="skillsbottom">skills</a>
+    <a href="#worklink" id="workbottom">my<span class="periodw">.</span>Work</a>
+    <a href="#aboutlink" class="active" id="aboutbottom">about</a>
+    <a href="#contactlink" id="contactbottom">contact</a>
+  </div>
+</nav>
 </footer>
 </body>
 </html>
