--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,22 +7,11 @@
 <!-- ^***************************JQUERY*************************************** -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <!-- ^************BOOTSTRAP 5 DOCS -> https://v5.getbootstrap.com/************** -->
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script> -->
-  <!-- <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script> -->
-  <!-- <!-- ***************************SHOELACE********************************** -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.23/dist/shoelace/shoelace.css">
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.23/dist/shoelace/shoelace.esm.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
       integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
       integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
  <!-- ^************************YOUR CODE**************************************** -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@animxyz/core@0.3.0/dist/animxyz.min.css">
   <link rel="stylesheet" href="./css/style.css"/>
   <link rel="stylesheet" href="./css/tablet.css"/>
   <link rel="stylesheet" href="./css/desktop.css"/>
@@ -40,22 +28,22 @@
     </div>
   </div>
 </header>
-  <section class="aboutsec">
-    <div id="statement">
-      <div class="title">
-        <h2 class="jobtitle">Software Engineer</h2>
-      </div>
-      <div class="outof">
-        <h3 class="outof-word">out of</h3>
-      </div>
-      <div class="denver">
-        <h2 class="city">Denver,</h2>
-      </div>
-      <div class="colorado">
-        <h2 class="state">Colorado</h2>
-      </div>
+<section class="aboutsec">
+  <div id="statement">
+    <div class="title">
+      <h2 class="jobtitle">Software Engineer</h2>
     </div>
-  </section>
+    <div class="outof">
+      <h3 class="outof-word">out of</h3>
+    </div>
+    <div class="denver">
+      <h2 class="city">Denver,</h2>
+    </div>
+    <div class="colorado">
+      <h2 class="state">Colorado</h2>
+    </div>
+  </div>
+</section>
                             <!-- !ABOUT ME -->
 <div class="abouttrans"></div>
 <section class="skillscontainer" id="skillslink">
@@ -84,7 +72,7 @@
       <div class="desc">Node.js</div>
     </div>
     <div class="skill">
-      <img class="icon" id="boot" src="icon/iconfinder_Bootstrap_4923030.svg">
+      <img class="icon" id="boot" src="icon/iconfinder_bootstrap_icon_291791.svg">
       <div class="desc">Bootstrap</div>
     </div>
     <div class="skill">
@@ -108,7 +96,7 @@
       <div class="desc">Adobe XD</div>
     </div>
     <div class="skill">
-      <img class="icon" src="img/iconfinder_Figma_1_square_2925245 (1).svg"/>
+      <img class="icon" id="figma" src="icon/iconfinder_Figma_1_square_2925245 (1).svg"/>
       <div class="desc">Figma</div>
     </div>
     <div class="skill">
@@ -117,8 +105,7 @@
     </div>
   </div>
 </section>
-
-                              <!-- !PROJECTS -->
+                              <!-- !my.Work -->
 <div class="worktrans"></div>
 <div class="my-work" id="worklink">
   <h2 class="work-heading">my<span class="period">.</span>Work</h2>
@@ -143,10 +130,10 @@
                        people's lives.</p>
 </section>
 <div class="icons" id="contactlink">
-  <a href="https://facebook.com/kel.strother/"><img src="icon/iconfinder_facebook-logo_1269914.svg"/></a>
-  <a href="https://linkedin.com/kelstrother/"><img src="icon/iconfinder_Circled_Linkedin_svg_5279114 (2).svg"/></a>
-  <a href="https://instagram.com/kelstrother/"><img src="icon/iconfinder_Instagram_2613262.svg"/></a>
-  <a href="https://twitter.com/kelstrother/"><img src="/icon/iconfinder_BW_Twitter_3_glyph_svg_5305172.svg"/></a>
+  <a href="https://facebook.com/kel.strother/" target="_blank"><img src="icon/iconfinder_facebook-logo_1269914.svg" /></a>
+  <a href="https://linkedin.com/in/kelstrother/" target="_blank"><img src="icon/iconfinder_Rounded_Linkedin2_svg_5282542.svg" /></a>
+  <a href="https://instagram.com/kelstrother/" target="_blank"><img src="icon/iconfinder_yumminky-social-media-06_2083214.svg"/></a>
+  <a href="https://twitter.com/kelstrother/" target="_blank"><img src="/icon/iconfinder_BW_Twitter_3_glyph_svg_5305172.svg" /></a>
 </div>
 <section class="contact">
   <div class="grabber">
@@ -162,23 +149,14 @@
   </div>
 </section>
                               <!-- !FOOTER -->
-                             
 <footer>
   <div class="emptynest"></div>
-<!-- <div class="navbar">
-  <a href="#skillslink" id="skills">skills</a>
-  <a href="#worklink" id="work">my<span class="period">.</span>Work</a>
-  <a href="#aboutlink" class="active" id="about">about</a>
-  <a href="#contactlink" id="contact">contact</a>
-</div> -->
-<nav  class="navcontainer">
-  <div class="navbarbottom">
-    <a href="#skillslink" id="skillsbottom">skills</a>
-    <a href="#worklink" id="workbottom">my<span class="periodw">.</span>Work</a>
-    <a href="#aboutlink" class="active" id="aboutbottom">about</a>
-    <a href="#contactlink" id="contactbottom">contact</a>
-  </div>
-</nav>
+<div class="navbarbottom" id="navcontainer">
+  <a href="#skillslink" id="skillsbottom">skills</a>
+  <a href="#worklink" id="workbottom">my<span class="periodw">.</span>Work</a>
+  <a href="#aboutlink" id="aboutbottom">about</a>
+  <a href="#contactlink" id="contactbottom">contact</a>
+</div>
 </footer>
 </body>
 </html>
