last minute tweaks

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
     </div>
   </div>
 </section>
-                            <!-- !ABOUT ME -->
+                            <!-- !SKILLS -->
 <div class="abouttrans"></div>
 <section class="skillscontainer" id="skillslink">
   <div class="skills">
@@ -105,13 +105,13 @@
     </div>
   </div>
 </section>
-                              <!-- !my.Work -->
+                              <!-- !MY.Work -->
 <div class="worktrans"></div>
 <div class="my-work" id="worklink">
   <h2 class="work-heading">my<span class="period">.</span>Work</h2>
 </div>
 <main id="creations"></main>
-                               <!-- !Contact -->
+                               <!-- !ABOUT -->
 <div class="contacttrans" id="aboutlink">
   <div class="aboutme">
     <h2 class="bitaboutme">about me...</h2>
@@ -129,12 +129,14 @@
                        things that make a difference in 
                        people's lives.</p>
 </section>
+<!-- !....................................ICON BAR -->
 <div class="icons" id="contactlink">
   <a href="https://facebook.com/kel.strother/" target="_blank"><img src="icon/iconfinder_facebook-logo_1269914.svg" /></a>
   <a href="https://linkedin.com/in/kelstrother/" target="_blank"><img src="icon/iconfinder_Rounded_Linkedin2_svg_5282542.svg" /></a>
   <a href="https://instagram.com/kelstrother/" target="_blank"><img src="icon/iconfinder_yumminky-social-media-06_2083214.svg"/></a>
   <a href="https://twitter.com/kelstrother/" target="_blank"><img src="/icon/iconfinder_BW_Twitter_3_glyph_svg_5305172.svg" /></a>
 </div>
+<!-- !......................................CONTACT -->
 <section class="contact">
   <div class="grabber">
     <img src="img/background@2x.png" alt="Me holding guitars" class="guitars">
@@ -148,7 +150,7 @@
     </form>
   </div>
 </section>
-                              <!-- !FOOTER -->
+                              <!-- !FOOTER NAVIGATION-->
 <footer>
   <div class="emptynest"></div>
 <div class="navbarbottom" id="navcontainer">
