end of cohort updates

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,8 +44,13 @@
     </div>
   </div>
 </section>
-                            <!-- !SKILLS -->
+<!-- !SKILLS -->
 <div class="abouttrans"></div>
+<div class="my-work" id="worklink">
+  <h2 class="work-heading">my<span class="period">.</span>Work</h2>
+</div>
+<main id="creations"></main>
+<div class="worktrans"></div>
 <section class="skillscontainer" id="skillslink">
   <div class="skills">
     <h2 class="myskills">skills</h2>
@@ -106,11 +111,7 @@
   </div>
 </section>
                               <!-- !MY.Work -->
-<div class="worktrans"></div>
-<div class="my-work" id="worklink">
-  <h2 class="work-heading">my<span class="period">.</span>Work</h2>
-</div>
-<main id="creations"></main>
+
                                <!-- !ABOUT -->
 <div class="contacttrans" id="aboutlink">
   <div class="aboutme">
@@ -118,17 +119,24 @@
   </div>
 </div>
 <section class="myself">
-  <p class="moreabout">My name is Kel. I am 33 years old 
-                       and have lived in Colorado for all 
-                       33 of 'em. When I'm not creating 
-                       things with code, I enjoy anything
-                       music related.<br><br>I am a software 
+  <p class="moreabout">My name is Kel. I live in 
+                       Colorado. When I'm not creating 
+                       things with code, I'm probably
+                       doing something music related.
+                       <br><br>I am a software 
                        engineer with a focus on frontend
                        development. A need for creative
-                       expression motivates me to build 
-                       things that make a difference in 
-                       people's lives.</p>
+                       expression drives my ambition to build 
+                       things that can make a difference.<br>
+                      </p>
 </section>
+<div class="resume-container">
+  <!-- <p class="resume-click">Click for</p>  -->
+  <a href="./resume/Kel_Strother_Resume.pdf" 
+  target="_blank" 
+  class="resume">my
+  <span class="periodw">.</span> resume</a><br>
+</div>
 <!-- !....................................ICON BAR -->
 <div class="icons" id="contactlink">
   <a href="https://facebook.com/kel.strother/" target="_blank"><img src="icon/iconfinder_facebook-logo_1269914.svg" /></a>
@@ -154,8 +162,8 @@
 <footer>
   <div class="emptynest"></div>
 <div class="navbarbottom" id="navcontainer">
+  <a href="#worklink" id="workbottom">my<span class="periodw">.</span>work</a>
   <a href="#skillslink" id="skillsbottom">skills</a>
-  <a href="#worklink" id="workbottom">my<span class="periodw">.</span>Work</a>
   <a href="#aboutlink" id="aboutbottom">about</a>
   <a href="#contactlink" id="contactbottom">contact</a>
 </div>
